Changelog
2.6
Pulled in commits by rjr
Fixed version as 2.5.5 should have been 2.6

2.5.5
Updated to be compliant with CB600+
Further Maven Integration and Autobuilding
Better handling of configuration file errors.
If you do not have a world config file for the default world at startup it will now look for config.yml
If it cannot find that it will look for world.yml instead in case you named it that when that is not what is in level-name:
It will rewrite the config file to be the proper name. At this time it does not delete the old one though.
Removed defunct public abstract calls. If your not using the right one by now you should be shot anyway.

2.5.4
Added Command aliases for perms and pr
Changed the way directories are handled.
Stopped it from creating an empty <world>.yml file in base directory

2.5.3
Change from File.pathSeparator to File.separator to fix multiworld perms

2.5.2
Added in a check that will use the default world permissions if a world does not have a config file.
Added check public abstract boolean inSingleGroup(String world, String name, String group)
Small change to colorize() to help fix HeroChat issue
Minor bug fixes

2.5.1
Fixed a bug that could cause a group to be returned as null for getGroups()

2.5
Fixed console users not being able to issue command
Added in AntiBuild functionality
getGroups() added to PermissionHandler so other plugins can call it
Minor fixes to various things.

2.4
Fixed setupPermissions()

2.3
It seems that I may have gotten a bit over zealous with code cleanup
Merged in the last of Nijikokuns code.

2.2
Developer change
Fixed reloading of permissions configuration files
Changed the commands to register with plugin.yml
Moved command from onPlayerCommand to onCommand

2.1
Multiple-World support
New cache layer, and cache control support for plugins
Editing features for plugins to hook into
Exempt nodes
World copying

2.0
Forgot.

1.9
Fully fixes inheritance.